# TELECOM_CHATBOT_-EvalRAG-

./: .gitignore  README.md  app.py  config.py  models.py  observability.py  pyproject.toml  rag_chain.py  retriever.py  run_all_ingestion.py  run_all_ingestions.py
.github/workflows/: ci_rag_tests.yml
data/: faq.csv  tickets.db
datasets/: eval_dataset.json
ingests/: ingest_faq.py  ingest_pdf.py  ingest_tickets.py
prompts/: telecom_assistant_v1.0.0.txt
tests/: cached_rag_dataset.json  eval_latency.py  eval_ragas.py  eval_retriever.py  eval_ticket_retrieval.py  final_ragas_evaluation_report.csv  test.py
